# shop-track

./: README.md  pyproject.toml
.gemini/: styleguide.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  test-backend.yml
backend/: .dockerignore  .env_example  Dockerfile  README.md  compose.traefik.yml  compose.yml  entrypoint.sh  manage.py  pyproject.toml
backend/records/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/records/migrations/: 0001_initial.py
backend/shoptrack/: settings.py  urls.py  wsgi.py
budibase/: README.md
frontend/: .dockerignore  .env.development  .env.production  .env_example  Dockerfile  README.md  compose.traefik.yml  compose.yml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CategoryForm.tsx  ConfirmationDialog.tsx  ManufacturerForm.tsx  OriginForm.tsx  ProductForm.tsx  ProtectedRoute.tsx  ShoppingRecordForm.tsx  StoreForm.tsx  UnitForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CategoryCreatePage.tsx  CategoryEditPage.tsx  CategoryListPage.tsx  Home.tsx  HomePage.tsx  ItemsList.tsx  ItemsListPage.tsx  LoginPage.tsx  ManufacturerCreatePage.tsx  ManufacturerEditPage.tsx  ManufacturerListPage.tsx  OriginCreatePage.tsx  OriginEditPage.tsx  (+14 more)
records/: tests.py
records/migrations/: 0001_initial.py
shoptrack/: asgi.py  settings.py  urls.py
slack_integration/: .env_example  README.md  package-lock.json  package.json  tsconfig.json
slack_integration/src/: app.ts
(+24 files in other folders)
